Major rewrite of maven-merge-configuration moving the merging logic into its own standalone project

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ target/
 
 /cluster-ids/nbproject/private/
 nb-configuration.xml
-
+nbactions.xml
 /giulius/nbproject/
 /giulius-settings/nbproject/
 /giulius-threadpool/nbproject/
