Remove unneeded (and not updated in Guice 5.0.x - dead?) guice-multibindings test dep; giulus-mongojack was never much used, and there are better frameworks for working with MongoDB from java; removing from the build but not deleting yet

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>signalreload</module>
         <module>giulius-jdbc</module>
         <module>giulius-mongodb</module>
-        <module>giulius-mongojack</module>
+<!--        <module>giulius-mongojack</module> -->
         <module>giulius-mongodb-async</module>
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
