Get rid of unnecessary locking when a JdbcInitializer is present; provide better named properties for min/max connections and deprecate old ones

--- a/giulius-jdbc/pom.xml
+++ b/giulius-jdbc/pom.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
         <version>2.7.2</version>
+        <relativePath/>
     </parent>
+    <version>2.7.2.1</version>
     <name>Giulius JDBC</name>
     <artifactId>giulius-jdbc</artifactId>
     <url>https://github.com/timboudreau/giulius</url>
