Remove obsolete repository sections from poms; misc test fixes to ensure building on apple silicon; library version updates

--- a/smart-jar-merge/pom.xml
+++ b/smart-jar-merge/pom.xml
@@ -80,7 +80,9 @@
             <plugin>
                 <groupId>com.mastfrog</groupId>
                 <artifactId>maven-merge-configuration</artifactId>
-                <version>2.5.0</version>
+                <!-- This needs to boostrap from the previous release or 
+                     we get a cyclic dependency -->
+                <version>${maven.merge.configuration.previous}</version>
                 <executions>
                     <execution>
                         <!--<phase>process-resources</phase>-->
