--- a/giulius-annotation-processors/pom.xml
+++ b/giulius-annotation-processors/pom.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>3.0.0-dev</version>
         <relativePath/>
     </parent>
     <artifactId>giulius-annotation-processors</artifactId>
     <url>https://github.com/timboudreau/giulius</url>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
@@ -19,6 +23,7 @@
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -26,6 +31,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -44,6 +50,7 @@
             <artifactId>annotation-tools</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -64,7 +71,7 @@
                     <compilerArgument>-Xdiags:verbose</compilerArgument>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-                    <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
+<!-- <forceJavacCompilerUse>true</forceJavacCompilerUse> -->
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
                             <groupId>${project.groupId}</groupId>
