--- a/giulius-mongodb-async-init/pom.xml
+++ b/giulius-mongodb-async-init/pom.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>3.0.0-dev</version>
         <relativePath/>
     </parent>
     <artifactId>giulius-mongodb-async-init</artifactId>
     <url>https://github.com/timboudreau/giulius</url>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
@@ -19,6 +23,7 @@
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -26,6 +31,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -79,9 +85,11 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <!-- to enable console logging in real time -->
-        <!--
+<!--
+            
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -105,6 +113,7 @@
                 </configuration>
             </plugin>            
         </plugins>
-                -->
+                
+        -->
     </build>
 </project>
