ShutdownHooks and ShutdownHookRegistry are moved to util/shutdown-hooks, with some improvements.
The versions in Giulius now delegate to the implementation there and are simply a backward compatible,
deprecated husk.  Both sets of hooks are bound by DependenciesModule.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <version>2.8.2</version>
         <relativePath/>
     </parent>
+    <version>2.8.2.1</version>
+
 
     <name>Giulius Parent</name>
     <description>Guice + Configuration tools</description>
