--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>giulius-annotations</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>shutdown-hooks</artifactId>
+            <version>2.8.2.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
         </dependency>
