--- a/maven-merge-configuration/pom.xml
+++ b/maven-merge-configuration/pom.xml
@@ -10,12 +10,11 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.3</version>
+        <version>2.8.4</version>
         <relativePath/>
     </parent>
 
     <artifactId>maven-merge-configuration</artifactId>
-    <version>2.8.3.4</version>
 
     <url>https://github.com/timboudreau/giulius</url>
     <description>
@@ -39,19 +38,16 @@
         <dependency>
             <groupId>com.telenav.cactus</groupId>
             <artifactId>cactus-maven-xml</artifactId>
-            <version>1.5.19</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>smart-jar-merge</artifactId>
-            <version>${mastfrog.version}.5</version>
         </dependency>
         <!-- Dependency of giulius-settings, but if we don't explicitly list
         it, it can wind up not on the classpath when running this plugin -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>util-collections</artifactId>
-            <version>${mastfrog.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -91,8 +87,8 @@
 
             <plugin>
 
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.6.0</version>
                 <configuration>
                     <goalPrefix>merge-configuration</goalPrefix>
 
@@ -160,4 +156,3 @@
     </developers>
 
 </project>
-
