--- a/maven-merge-configuration/src/testprojects/a/pom.xml
+++ b/maven-merge-configuration/src/testprojects/a/pom.xml
@@ -13,6 +13,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-a</artifactId>
+    <version>2.8.4</version>
 
     <url>https://github.com/timboudreau/giulius</url>
     <name>Test Project A</name>
@@ -81,4 +82,3 @@
     </developers>
 
 </project>
-
