--- a/maven-merge-configuration/src/testprojects/c/pom.xml
+++ b/maven-merge-configuration/src/testprojects/c/pom.xml
@@ -13,6 +13,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-c</artifactId>
+    <version>2.8.4</version>
 
     <url>https://github.com/timboudreau/giulius</url>
     <name>Test Project C</name>
@@ -85,4 +86,3 @@
     </developers>
 
 </project>
-
