--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <!-- <module>giulius-mongojack</module> -->
 
         <module>giulius-mongodb-async</module>
+        <module>giulius-mongodb-reactive</module>
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
         <module>giulius-annotations</module>
