--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
         <module>giulius-mongodb-async</module>
         <module>giulius-mongodb-reactive</module>
+        <module>giulius-mongodb-reactive-init</module>
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
         <module>giulius-annotations</module>
