Make Subscribers stateful and subclassable; ensure all subscribers used from it get any thrown throwables reported, which they are not by default (the mongo driver seems to have no way to provide an Executor to do its work in, which could be wrappered to take care of that); implementation of Subscribers in acteur-mongo-reactive will reconstitute the scope

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ nbactions.xml
 /giulius/injection-reflection-indexer/nbproject/
 /injection-reflection-indexer/nbproject/
 /giulius-postgres-async/nbproject/
+/giulius-mongodb-reactive/nbproject/
