--- a/giulius-mongodb-reactive/pom.xml
+++ b/giulius-mongodb-reactive/pom.xml
@@ -29,13 +29,11 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-reactivestreams</artifactId>
-            <version>4.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>bson</artifactId>
-            <version>4.7.1</version>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
@@ -43,6 +41,10 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>function</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-function</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
