--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>util-function</artifactId>
+            <artifactId>function</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
