--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -17,16 +17,22 @@
     <artifactId>giulius-mongodb-async</artifactId>
 
     <url>https://github.com/timboudreau/giulius</url>
+    
+    <properties>
+        <enforcer.skip>true</enforcer.skip>
+    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-async</artifactId>
+            <version>${mongo.driver.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>bson</artifactId>
+            <version>${mongo.driver.version}</version>
         </dependency>        
         <dependency>
             <groupId>${project.groupId}</groupId>
