--- a/maven-merge-configuration/src/testprojects/c/pom.xml
+++ b/maven-merge-configuration/src/testprojects/c/pom.xml
@@ -6,14 +6,13 @@
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <artifactId>guicy-parent</artifactId>
+        <artifactId>giulius-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>2.8.3</version>
+        <version>2.9.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-c</artifactId>
-    <version>2.8.7</version>
 
     <url>https://github.com/timboudreau/giulius</url>
     <name>Test Project C</name>
@@ -21,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>guicy</artifactId>
+            <artifactId>giulius</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
