Split the postgres-over-tmp-dir harness/launcher in to its own library and make it usable as a standalone application

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <module>giulius-annotation-processors</module>
         <module>giulius-postgres-async</module>
         <module>smart-jar-merge</module>
-
+        <module>postgres-harness</module>
     </modules>
     <issueManagement>
         <system>Github</system>
