--- a/giulius-postgres-async/pom.xml
+++ b/giulius-postgres-async/pom.xml
@@ -11,8 +11,10 @@
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
         <version>2.9.4</version>
+        <relativePath/>
     </parent>
 
+    <version>2.9.4.1</version>
     <properties>
         <enforcer.skip>true</enforcer.skip>
     </properties>
@@ -61,7 +63,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>postgres-harness</artifactId>
-            <version>${project.version}</version>
+            <version>${mastfrog.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
