'Add @Setting annotation which allows help and shortcuts to be associated with settings, and the giulius-help library which can read the generated information and emit descriptions of what command-line arguments do'
Affected Checkouts
------------------

  * acteur-modules/acteur-parent
  * giulius-modules/giulius-parent
  * bunyan-java-v2
  * (root)

##### Provenance

Generated by cactus: *cactus-maven-plugin* version _1.5.45_.

  * Mojo:		CommitMojo
  * Generation-Time:	2023-02-21T09:21:42Z
  * Plugin-Build:	yellow dune-buggy
  * Plugin-Date:	2022.11.02
  * Plugin-Commit:	c66f67cfba0b6b556c8a9f3907e02f54ca8a7a70
  * Plugin-Repo-Clean:	true

--- a/giulius-postgres-async/pom.xml
+++ b/giulius-postgres-async/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>giulius</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-annotation-processors</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-pg-client</artifactId>
         </dependency>
