--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>shutdown-hooks</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>thread-local</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
         </dependency>
