--- a/smart-jar-merge/pom.xml
+++ b/smart-jar-merge/pom.xml
@@ -28,6 +28,10 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>thread-local</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util-strings</artifactId>
         </dependency>
         <dependency>
